# GrokSearch-rs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
docs/: ARCHITECTURE.md  CONFIGURATION.md
npm/grok-search-rs/: package.json
src/: config.rs  credentials.rs  error.rs  lib.rs  main.rs  mcp.rs  service.rs
src/adapters/: chat_completions_request.rs  chat_completions_response.rs  grok_responses_response.rs  sources.rs
src/model/: tool.rs
src/oauth/: constants.rs  login.rs  mod.rs  pkce.rs  token_store.rs
src/providers/: firecrawl.rs  grok.rs  http.rs  tavily.rs
src/sources/: arxiv.rs  github.rs  mod.rs  stackexchange.rs  wikipedia.rs
tests/: adapter_grok_responses.rs  config.rs  firecrawl_rotation.rs  integration_compat.rs  integration_service.rs  response_budget.rs  service_contract.rs  sources_render.rs  sse_bug_repro.rs  tavily_rotation.rs
tests/fixtures/sources/: github_issue.json  github_pr.json  wikipedia_extract.json
