[package]
name = "grok-search-rs"
version = "0.1.14"
edition = "2021"
rust-version = "1.78"
description = "Rust MCP server for Grok web search and Tavily-backed source retrieval"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Episkey-G/GrokSearch-rs"
homepage = "https://github.com/Episkey-G/GrokSearch-rs"
keywords = ["mcp", "grok", "tavily", "firecrawl", "search"]
categories = ["command-line-utilities", "web-programming"]

[lib]
name = "grok_search_rs"
path = "src/lib.rs"

[[bin]]
name = "grok-search-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt", "sync", "time"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
getrandom = "0.3"
ring = "0.17"
url = "2"
percent-encoding = "2"
quick-xml = { version = "0.37", default-features = false, features = ["encoding"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
